[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/user_interface.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 10.0

[node name="PanelTimer" type="PanelContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -235.0
margin_bottom = 76.0

[node name="Time" type="Label" parent="Control/PanelTimer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 211.0
margin_bottom = 52.0
text = "Timer: 00:00:00"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="Control/PanelTimer"]
autostart = true

[node name="PanelLevel" type="PanelContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -74.5
margin_right = 74.5
margin_bottom = 76.0

[node name="Level" type="Label" parent="Control/PanelLevel"]
margin_left = 24.0
margin_top = 24.0
margin_right = 125.0
margin_bottom = 52.0
text = "Level: 1"

[node name="PanelDeath" type="PanelContainer" parent="Control"]
margin_right = 162.0
margin_bottom = 76.0

[node name="Death" type="Label" parent="Control/PanelDeath"]
margin_left = 24.0
margin_top = 24.0
margin_right = 138.0
margin_bottom = 52.0
text = "Deaths: 1"

[connection signal="timeout" from="Control/PanelTimer/Timer" to="." method="_on_Timer_timeout"]
